examples/test/testpolicy14571.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14571
  namespace: namespace206
spec:
  podSelector:
    matchLabels:
      key32: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value7
      podSelector:
        matchLabels:
          key30: value36
          key19: value32
          key32: value13
